<resources>
    <string name="app_name">LayoutsWe2</string>
    <string name="hello_and_03">Hello AND 03</string>
    <string name="welcome_to_layouts">Welcome to Layouts</string>
    <string name="blue_circle">blue circle</string>
    <string name="name">Name :</string>
    <string name="age">Age :</string>
    <string name="lloyd_d_costa">Lloyd D\'Costa</string>
    <string name="_50">50</string>
    <string name="info_vector">info vector</string>
    <string name="next">Next</string>
</resources>